# zuban

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  LICENSE.txt  README.md  about.hbs  build.sh  development-notes.md  flake.nix  release.sh  rustfmt.toml
crates/cli_args/: Cargo.toml
crates/cli_args/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  searcher.rs  venv.rs
crates/licensing/: Cargo.toml  README.md  new_openssl_key.sh
crates/licensing/src/: lib.rs  main.rs
crates/parsa_python/: Cargo.toml
crates/parsa_python/src/: lib.rs  tokenizer.rs
crates/parsa_python/tests/: test_grammar.rs
crates/parsa_python/tests/snapshots/: test_grammar__assignments_setitem.snap  test_grammar__bytes.snap  test_grammar__calls.snap  test_grammar__completion_on_func_call1.snap  test_grammar__completion_on_func_call2.snap  test_grammar__complex_calls.snap  test_grammar__complex_dedents_no_crash.snap  test_grammar__comprehension_fails.snap  test_grammar__comprehension_simple.snap  test_grammar__del_stmt.snap  test_grammar__dict_comprehension.snap  test_grammar__exception_group.snap  test_grammar__for_stmt.snap  test_grammar__function_simple.snap  test_grammar__import_from_dotted.snap  test_grammar__import_from_fails.snap  test_grammar__import_from_normal.snap  test_grammar__import_name_fails.snap  test_grammar__import_names.snap  test_grammar__invalid_syntax.snap  test_grammar__lambda_fail_with_slash.snap  test_grammar__lambda_fails.snap  test_grammar__match_class_pattern.snap  test_grammar__match_error_recovery.snap  test_grammar__match_error_recovery2.snap  test_grammar__match_negative_number.snap  test_grammar__match_simple.snap  test_grammar__match_underscore_with_as.snap  (+15 more)
crates/parsa_python_cst/: Cargo.toml
crates/parsa_python_cst/src/: code_actions.rs  completion.rs  lib.rs  match_stmt.rs  ranges.rs  selection_ranges.rs  signatures.rs  strings.rs
crates/playground_wasm/: Cargo.toml
crates/playground_wasm/scripts/: extract_typeshed.sh  stubs.txt
crates/playground_wasm/src/: helpers.rs  lib.rs  ls.rs  stubs.rs
crates/playground_wasm/web/: index.html
crates/primer/: Cargo.toml
crates/primer/src/: main.rs
crates/scripts/: Cargo.toml  cpython_parser_speed.py  parso_speed.py
crates/scripts/src/: main.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
crates/vfs/: Cargo.toml
crates/vfs/src/: glob_abs_path.rs  lib.rs  local_fs.rs  local_fs_stub.rs  memory.rs  normalized_path.rs  path.rs  tree.rs  utils.rs  vfs.rs  workspaces.rs
crates/zmypy/: Cargo.toml
crates/zmypy/src/: lib.rs  main.rs
crates/zuban/: Cargo.toml
crates/zuban/src/: lib.rs
crates/zuban_benchmark/: Cargo.toml
crates/zuban_benchmark/benches/: parsa_python.rs  zuban_python.rs
crates/zuban_python/: Cargo.toml
crates/zuban_python/src/: arguments.rs  auto_imports.rs  code_actions.rs  completion.rs  config.rs  database.rs  diagnostics.rs  documentation.rs  format_data.rs  getitem.rs  goto.rs  heuristic_infer.rs  imports.rs  inference.rs  inference_state.rs  inferred.rs  inlay_hints.rs  lib.rs  lines.rs  lsp_utils.rs  match_.rs  name.rs  node_ref.rs  params.rs  pick_files.rs  pytest.rs  python_state.rs  result_context.rs  select_files.rs  selection_ranges.rs  semantic_tokens.rs  signatures.rs  sys_path.rs  sys_path_stub.rs  utils.rs  workspaces.rs
crates/zubanls/: Cargo.toml
crates/zubanls/src/: capabilities.rs  client_config.rs  custom.rs  lib.rs  notebooks.rs  notification_handlers.rs  panic_hooks.rs  request_handlers.rs  semantic_tokens.rs  server.rs  wasm.rs
deploy/pypi/zuban/: .gitignore  CHANGELOG.rst  README.rst  about.hbs  about.toml  build.sh  pre-maturin-build.sh  pyproject.toml  setup.py  test-maturin-build.sh
scripts/: Cargo.toml  build-wasm.sh  ci-test.sh  install-locally.sh  release.sh  run_primer.sh
scripts/src/: main.rs
zmypy/: Cargo.toml
zmypy/src/: main.rs
zuban_python/: Cargo.toml
zuban_python/docs/: ideas.md
zuban_python/src/: arguments.rs  cache.rs  class.rs  config.rs  database.rs  diagnostics.rs  file.rs  file_state.rs  format_data.rs  generics.rs  getitem.rs  imports.rs  indexer.rs  inference_state.rs  inferred.rs  lib.rs  lines.rs  matcher.rs  module.rs  name.rs  name_binder.rs  node_ref.rs  params.rs  python_state.rs  python_value.rs  sys_path.rs  tree_utils.rs  utils.rs  value.rs  workspaces.rs
zuban_python/src/file/: annotation.rs  class_type_var_finder.rs  diagnostics.rs  file_state.rs  flow_analysis.rs  inference.rs  mod.rs  name_binder.rs  python_file.rs  type_computation.rs  type_var_finder.rs  utils.rs
zuban_python/src/matching/: class_like.rs  format_data.rs  generic.rs  generics.rs  lookup_result.rs  match_.rs  matcher.rs  mod.rs  params.rs  result_context.rs  type_.rs  type_var_matcher.rs  utils.rs
zuban_python/src/type_/: callable.rs  common_base_type.rs  common_sub_type.rs  dataclass.rs  enum_.rs  intersection.rs  lookup_result.rs  matching.rs  mod.rs  named_tuple.rs  operations.rs  overlaps.rs  recursive_type.rs  replace.rs  simplified_union.rs  tuple.rs  type_var_likes.rs  typed_dict.rs  union.rs  utils.rs
zuban_python/src/type_helpers/: bound_method.rs  callable.rs  class.rs  dataclass.rs  enum_.rs  function.rs  instance.rs  mod.rs  module.rs  named_tuple.rs  overload.rs  tuple.rs  typed_dict.rs  typing.rs
zuban_python/src/value/: bound_method.rs  callable.rs  class.rs  function.rs  instance.rs  iterable.rs  literal.rs  mod.rs  module.rs  named_tuple.rs  never.rs  none.rs  special.rs  tuple.rs  type_alias.rs  typing.rs
zuban_python/tests/blackbox/: cases.rs  main.rs
zuban_python/tests/mypylike/: LICENSE  main.rs  skipped
zubanls/: Cargo.toml
zubanls/src/: capabilities.rs  edit.rs  lib.rs  main.rs  message.rs  notification_handlers.rs  request_handlers.rs  server.rs  session.rs  system.rs  trace.rs
zubanls/src/edit/: range.rs  text_document.rs
zubanls/src/server/: api.rs  client.rs  schedule.rs
zubanls/src/server_old/: api.rs  client.rs  connection.rs  schedule.rs
zubanls/src/session/: index.rs  settings.rs
zubanls/tests/slow-tests/: connection.rs  main.rs  support.rs  testdir.rs
(+399 files in other folders)
