[workspace]

resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
rust-version = "1.81"
homepage = "https://zubanls.com"
authors = ["Dave Halter <davidhalter88@gmail.com>"]

[workspace.dependencies]
# Internal crates
parsa = { path = "./crates/parsa" }
parsa_python = { path = "./crates/parsa_python" }
parsa_python_cst = { path = "./crates/parsa_python_cst" }
zuban_python = { path = "./crates/zuban_python" }
test_utils = { path = "./crates/test_utils" }
logging_config = { path = "./crates/logging_config" }
config = { path = "./crates/config" }
config_searcher = { path = "./crates/config_searcher" }
vfs = { path = "./crates/vfs" }
utils = { path = "./crates/utils" }

# General third party dependencies
anyhow = "*"
clap = { version = "*", features = ["derive"] }
crossbeam-channel = "*"
dirs = "*"
fnv = "*"
lazy_static = "*"
notify = "*"
regex = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
shellexpand = "*"
toml_edit = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["time", "local-time"] }
walkdir = "*"

# Dev dependencies
insta = "*"
