[workspace]

resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
rust-version = "1.83"
homepage = "https://zubanls.com"
authors = ["Dave Halter <info@zubanls.com>"]

[workspace.dependencies]
# Internal crates
config = { path = "./crates/config" }
config_searcher = { path = "./crates/config_searcher" }
licensing = { path = "./crates/licensing" }
logging_config = { path = "./crates/logging_config" }
parsa = { path = "./crates/parsa" }
parsa_python = { path = "./crates/parsa_python" }
parsa_python_cst = { path = "./crates/parsa_python_cst" }
test_utils = { path = "./crates/test_utils" }
utils = { path = "./crates/utils" }
vfs = { path = "./crates/vfs" }
zuban_python = { path = "./crates/zuban_python" }
zubanls = { path = "./crates/zubanls" }

# General third party dependencies
anyhow = "*"
clap = { version = "*", features = ["derive"] }
crossbeam-channel = "*"
dirs = "*"
fnv = "*"
lazy_static = "*"
notify = "*"
regex = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
shellexpand = "*"
toml_edit = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["time", "local-time"] }
walkdir = "*"

# Dev dependencies
insta = "*"
