[workspace]

resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.6.1"
edition = "2024"
rust-version = "1.92"
homepage = "https://zubanls.com"
authors = ["Dave Halter <info@zubanls.com>"]

[workspace.dependencies]
# Internal crates
cli_args = { path = "./crates/cli_args" }
config = { path = "./crates/config" }
licensing = { path = "./crates/licensing" }
logging_config = { path = "./crates/logging_config" }
parsa = { path = "./crates/parsa" }
parsa_python = { path = "./crates/parsa_python" }
parsa_python_cst = { path = "./crates/parsa_python_cst" }
test_utils = { path = "./crates/test_utils" }
typeshed_symbols = { path = "./crates/typeshed_symbols" }
utils = { path = "./crates/utils" }
vfs = { path = "./crates/vfs" }
zmypy = { path = "./crates/zmypy" }
zuban_python = { path = "./crates/zuban_python" }
zubanls = { path = "./crates/zubanls" }

# General third party dependencies
anyhow = "*"
clap = { version = "*", features = ["derive"] }
colored = { version = "*" }
crossbeam-channel = "*"
dirs = "*"
fnv = "*"
lazy_static = "*"
lsp-types = { version = "0.97.0", features = ["proposed"]}
notify = "*"
num-bigint = "*"
num-traits = "*"
rayon = "*"
regex = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
shellexpand = "*"
toml_edit = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["time", "local-time"] }
tracing-appender = "*"

# Dev dependencies
insta = "*"

[workspace.metadata.release]
pre-release-hook = [
    "sed",
    "-i",
    "s/^version = .*$/version = \"{{version}}\"/",
    # It seems like this is being run for every Cargo.toml
    "../../deploy/pypi/zuban/pyproject.toml",
]

[profile.release]
# Had debug = "line-tables-only" here, which is probably enough, but struggled
# with test unwinding which has works on debug = <any number>. Use this for now
debug = 1

[workspace.lints.rust]
explicit_outlives_requirements = "warn"
unused_extern_crates = "warn"
