[package]
name = "scripts"
version = "0.1.0"
authors = ["Dave Halter <davidhalter88@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parsa_python = { path = "../parsa_python" }
zuban_python = { path = "../zuban_python" }
