[package]
name = "zmypy"
version = "0.1.0"
authors = ["Dave Halter <davidhalter88@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.18"
tokio = { version = "1.40.0", features = ["rt", "macros", "fs", "io-util"] }
zuban_python = { path = "../zuban_python" }

[features]
zuban_debug = ["zuban_python/zuban_debug"]
