[package]
name = "zuban_python"
version = "0.1.0"
authors = ["Dave Halter <davidhalter88@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parsa_python_cst = { path = "../parsa_python_cst" }
lazy_static = "*"
regex = "*"
walkdir = "2"
rust-ini = "0.21.0"
toml_edit = "0.22.13"

[features]
zuban_debug = []

[[test]]
name = "blackbox"
harness = false

[[test]]
name = "mypylike"
harness = false
