[package]
name = "zuban_python"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
parsa_python_cst = { path = "../parsa_python_cst" }
lazy_static = "*"
regex = "*"
walkdir = "2"
rust-ini = { version = "0.21.0", features = ["inline-comment"] }
toml_edit = "0.22.13"
clap = { version = "4.5.4", features = ["derive"] }

[features]
zuban_debug = []

#[[test]]
#name = "blackbox"
#harness = false

[[test]]
name = "mypylike"
harness = false
