[package]
name = "zuban_python"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
parsa_python_cst.workspace = true
lazy_static.workspace = true
regex.workspace = true
walkdir.workspace = true
rust-ini = { version = "0.21.0", features = ["inline-comment"], git = "https://github.com/davidhalter-archive/rust-ini.git", branch="indented-multiline-values" }
toml_edit.workspace = true

[dev-dependencies]
clap.workspace = true

[features]
zuban_debug = []

#[[test]]
#name = "blackbox"
#harness = false

[[test]]
name = "mypylike"
harness = false
