[package]
name = "cli_args"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
config.workspace = true
licensing.workspace = true
vfs.workspace = true

anyhow.workspace = true
clap.workspace = true
colored.workspace = true
tracing.workspace = true
