[package]
name = "licensing"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
utils.workspace = true

anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

ed25519-dalek = "*"
