[package]
name = "parsa_python_cst"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
parsa_python.workspace = true
utils.workspace = true

num-bigint.workspace = true
num-traits.workspace = true
tracing.workspace = true
