[package]
name = "playground_wasm"
version.workspace = true
edition.workspace = true
publish = false
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = []
playground-single = ["zuban_python/playground-single"]

[dependencies]
anyhow.workspace = true
config.workspace = true
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
zuban_python = { workspace = true, default-features = false, features = ["playground-single"] }
vfs = { workspace = true, default-features = false }
once_cell = "1.19"
console_error_panic_hook = "0.1"
