[package]
name = "playground_wasm"
version.workspace = true
edition.workspace = true
publish = false
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
config.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
zuban_python.workspace = true
vfs.workspace = true
lsp-types.workspace = true
once_cell = "1.19"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
