[package]
name = "utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
fnv.workspace = true
dirs.workspace = true
serde.workspace = true
postcard = { version = "*", features = ["use-std"] }
