[package]
name = "vfs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
utils.workspace = true

anyhow.workspace = true
tracing.workspace = true
glob = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossbeam-channel.workspace = true
notify.workspace = true
same-file = "*"
