[package]
name = "vfs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
utils.workspace = true

anyhow.workspace = true
tracing.workspace = true
crossbeam-channel.workspace = true
ignore = "*"
notify.workspace = true
glob = "*"
same-file = "*"
