[package]
name = "zmypy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
homepage.workspace = true
authors.workspace = true

[dependencies]
config_searcher.workspace = true
config.workspace = true
licensing.workspace = true
zuban_python.workspace = true

clap.workspace = true

[dev-dependencies]
test_utils.workspace = true

[features]
zuban_debug = ["zuban_python/zuban_debug"]
