[package]
name = "zmypy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
config.workspace = true
licensing.workspace = true
vfs.workspace = true
zuban_python.workspace = true

clap.workspace = true
tracing.workspace = true

[dev-dependencies]
test_utils.workspace = true
logging_config.workspace = true

[features]
zuban_debug = ["zuban_python/zuban_debug"]
