[package]
name = "zuban"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[dependencies]
logging_config.workspace = true
zmypy.workspace = true
zubanls.workspace = true

anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
