[package]
name = "zuban"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
cli_args.workspace= true
logging_config.workspace = true
zmypy.workspace = true
zubanls.workspace = true

anyhow.workspace = true
clap.workspace = true
tracing.workspace = true

[features]
zuban_debug = ["zmypy/zuban_debug", "zubanls/zuban_debug"]
