[package]
name = "zuban_benchmark"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dev-dependencies]
criterion = "*"
utils.workspace = true
parsa_python_cst.workspace = true
zuban_python.workspace = true
config.workspace = true
vfs.workspace = true
test_utils.workspace = true

[[bench]]
name = "parsa_python"
harness = false

[[bench]]
name = "zuban_python"
harness = false
