[package]
name = "zuban_python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
parsa_python_cst.workspace = true
utils.workspace = true
vfs.workspace = true

anyhow.workspace = true
config.workspace = true
lazy_static.workspace = true
regex.workspace = true
tracing.workspace = true
lsp-types.workspace = true
which = "*"
rayon = "*"

[dev-dependencies]
clap.workspace = true
test_utils.workspace = true
logging_config.workspace = true
shlex = "*"

[features]
zuban_debug = []

[[test]]
name = "blackbox"
harness = false

[[test]]
name = "mypylike"
harness = false
