[package]
name = "zuban_python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
parsa_python_cst.workspace = true
utils.workspace = true
vfs = { workspace = true, default-features = false }

anyhow.workspace = true
colored.workspace = true
config.workspace = true
dirs.workspace = true
lazy_static.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
lsp-types.workspace = true
rayon = { workspace = true, optional = true }
which = { version = "*", optional = true }

[dev-dependencies]
clap.workspace = true
test_utils.workspace = true
logging_config.workspace = true
shlex = "*"

[features]
default = ["parallel", "fs-watch"]
parallel = ["dep:rayon"]
fs-watch = ["vfs/watch", "dep:which"]
playground-single = []
zuban_debug = []

[[test]]
name = "blackbox"
harness = false

[[test]]
name = "mypylike"
harness = false
