[package]
name = "zubanls"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
zuban_python.workspace = true
logging_config.workspace = true
config_searcher.workspace = true
vfs.workspace = true

anyhow.workspace = true
lsp-server = "0.7.7"
lsp-types = { version = "0.97.0", features = ["proposed"]}
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
shellexpand.workspace = true
crossbeam-channel.workspace = true

[dev-dependencies]
test_utils.workspace = true

[features]
zuban_debug = ["zuban_python/zuban_debug"]
