[package]
name = "zubanls"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
licensing.workspace = true
logging_config.workspace = true
config.workspace = true
vfs = { workspace = true, features = ["watch"] }
zuban_python = { workspace = true, features = ["parallel", "fs-watch"] }

anyhow.workspace = true
clap.workspace = true
crossbeam-channel.workspace = true
lazy_static.workspace = true
lsp-server = "0.7.7"
lsp-types.workspace = true
notify.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
shellexpand.workspace = true
serial_test = "*"
fluent-uri = "0.1.4"
urlencoding = "*"

[dev-dependencies]
test_utils.workspace = true

[features]
zuban_debug = ["zuban_python/zuban_debug"]
